<resources>
    <string name="app_name">YummyCusine</string>
    <string name="search">Search</string>
    <string name="title_notifications">Notification</string>
    <string name="sidebar">Sidebar</string>
    <string name="event">Event</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="favourite">Favourite</string>
    <string name="personal">Personal</string>
    <string name="browse_history">Browse History</string>
    <string name="settings">Settings</string>
    <string name="user_image">User Image</string>
    <string name="quit">Quit</string>
    <string name="temp">TEMP</string>
    <string name="sub_menu">Sub-menu</string>
    <string name="title_activity_search_result">SearchResult</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommendation">Recommendation</string>
    <string name="category">Category</string>
    <string name="log_out">Log Out</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="loggin">Loggin</string>
    <string name="title_home">Home</string>
    <string name="title_event">Event</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_personal">Personal</string>
    <string name="top_5_recipes">Top 5 Recipes</string>
    <string name="all_recipes">All Recipes</string>
    <string name="teammember">TeamMember:\nRiqi Huang\nZexi Chen\nPengwen Zhu</string>
    <string name="clean_data">Clean Data</string>
    <string name="hello_username">Hello, %1$s!</string>
    <string name="detect_picture">Detect Picture</string>
    <string name="title_activity_bhactivity">BHActivity</string>
    <string name="privacy">Privacy</string>
</resources>