<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.northeastern.yummycusine.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_event"
        android:name="edu.northeastern.yummycusine.ui.event.EventFragment"
        android:label="@string/title_event"
        tools:layout="@layout/fragment_event" />

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="edu.northeastern.yummycusine.ui.favourite.FavouriteFragment"
        android:label="@string/title_favourite"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/navigation_personal_not_logged_in"
        android:name="edu.northeastern.yummycusine.ui.personal.PersonalFragment"
        android:label="@string/title_personal"
        tools:layout="@layout/fragment_personal_not_logged_in" />

    <fragment
        android:id="@+id/navigation_personal"
        android:name="edu.northeastern.yummycusine.ui.personal.PersonalFragment"
        android:label="@string/title_personal"
        tools:layout="@layout/fragment_personal" />
</navigation>