<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/Search_btn"
                    android:layout_width="323dp"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/search" />

                <ImageView
                    android:id="@+id/detect_picture_btn"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:clickable="true"
                    android:contentDescription="@string/detect_picture"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/baseline_camera_alt_24" />
            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <fragment
            android:id="@+id/nav_host_fragment_activity_main"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:navGraph="@navigation/mobile_navigation" />

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:fabCradleMargin="10dp"
            app:fabCradleRoundedCornerRadius="10dp"
            app:fabCradleVerticalOffset="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">
                <!-- Define your custom buttons or icons here -->
                <TextView
                    android:id="@+id/home_text"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_home_black_24dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:text="@string/home"
                    android:textAllCaps="false">
                </TextView>

                <TextView
                    android:id="@+id/event_text"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/baseline_bookmarks_24"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:text="@string/event"
                    android:textAllCaps="false">
                </TextView>

                <TextView
                    android:id="@+id/favourite_text"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/baseline_favorite_24"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:text="@string/favourite"
                    android:textAllCaps="false">
                </TextView>

                <TextView
                    android:id="@+id/personal_text"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/baseline_person_24"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:text="@string/personal"
                    android:textAllCaps="false">
                </TextView>

            </LinearLayout>

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnUploadRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@android:drawable/ic_input_add"
            app:layout_anchor="@id/bottomAppBar" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>